s3-vfs: Fix developer build of vfs_ceph module.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11070

Guenther

Signed-off-by: Günther Deschner <gd@samba.org>
Reviewed-by: Michael Adam <obnox@samba.org>
(cherry picked from commit 5deb685ecd6f611bcf357f7040dc62582a50d2aa)